<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/activity_main_et_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/length_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width" />

    <EditText
        android:id="@+id/activity_main_et_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/width_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <EditText
        android:id="@+id/activity_main_et_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:lines="1"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/activity_main_bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/activity_main_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

</LinearLayout>